--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -6,6 +6,7 @@ body {
     font-size: 15px;
     color: #333333;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 
@@ -153,7 +154,22 @@ hr {
     opacity: 1;
 }
 
-
+.active {
+    color: #fce38a;
+}
+.active:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fce38a;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    transition: opacity .1s linear;
+    opacity: 0;
+}
 /*Button*/
 
 .btn {
@@ -301,6 +317,7 @@ hr {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
 }
 
